# rustld

./: Cargo.toml  README.md
.github/workflows/: test-suite.yml
examples/: rustld.rs  rustld_c.c
examples/ld_interp/: Cargo.toml  README.md
examples/ld_interp/.cargo/: config.toml
examples/ld_interp/src/: main.rs
include/: rustld.h
src/: c_api.rs  global_allocator.rs  io_macros.rs  ld_stubs.rs  lib.rs  page_size.rs  runtime_loader.rs  shared_object.rs  tls.rs  utils.rs
src/arch/: mod.rs
src/arch/aarch64/: mod.rs
src/arch/aarch64/syscall/: exit.rs  mmap.rs  relocation.rs  thread_pointer.rs  trampoline.rs
src/arch/x86_64/: mod.rs
src/arch/x86_64/syscall/: exit.rs  mmap.rs  mod.rs  relocation.rs  thread_pointer.rs  trampoline.rs
src/elf/: dynamic_array.rs  header.rs  header_table.rs  program_header.rs  relocate.rs  string_table.rs  symbol.rs  thread_local_storage.rs
src/libc/: environ.rs  errno.rs  mem.rs  mod.rs
src/libc/fs/: close.rs  mod.rs  open.rs  read.rs  write.rs
src/libc/process/: mod.rs
src/libc/str/: mod.rs
src/libc/threads/: mod.rs
src/linking/: mod.rs
src/start/: auxiliary_vector.rs  environment_variables.rs  mod.rs
tests/: build_tests.sh  hello_dyn_lib.c  hello_static.c  musl_dlopen_main.c  musl_plugin.c  musl_regex_io.c  musl_threads_tls.c  print_deadbeef.c  sqrt_with_ld.c  test_suite.sh
